--- a/COMP4537/labs/test/css/style.css
+++ b/COMP4537/labs/test/css/style.css
@@ -1,36 +1,24 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 20px;
+/* Disclosure: I used ChatGPT to assist with the content of this assignment. */
+
+#buttonContainer {
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
 }
 
-textarea {
-    display: block;
-    margin-bottom: 10px;
-    width: 100%;
-    height: 50px;
+.generated-button {
+    height: 5em;
+    width: 10em;
+    font-size: 1.5em;
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #000;
 }
 
-button {
-    background-color: orange;
-    border: none;
-    color: white;
-    padding: 10px 20px;
-    margin-bottom: 10px;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: darkorange;
-}
-
-#notesContainer div,
-#notesDisplay div {
-    margin-bottom: 20px;
-}
-
-/* Position time at the top-right corner */
-.top-right-time {
-    position: absolute;
-    top: 10px;
-    right: 10px;
+#message {
+    margin-top: 20px;
+    font-size: 1.5em;
+    color: red;
 }
